--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="main-header">
         <div class="main-header__wrapper">
             <div class="main-header__logo-wrapper">
-                <svg width="42" height="47" viewBox="0 0 42 47" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="main-header__logo-icon" width="42" height="47" viewBox="0 0 42 47" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M42 27.483V46.5C42 46.7666 41.7921 46.9828 41.5358 46.9828H16.9642C16.7079 46.9828 16.5 46.7666 16.5 46.5V41.4878H20.5714C21.0843 41.4878 21.5 41.0554 21.5 40.522V37H25.5714C26.0843 37 26.5 36.5676 26.5 36.0342V31.8292L30.5714 31.8292C31.0843 31.8292 31.5 31.3968 31.5 30.8634V27L41.5358 27C41.7921 27 42 27.2162 42 27.483Z"
                         fill="#F5D581" />
@@ -48,8 +48,10 @@
                         stroke="#F5D581" />
                 </svg>
 
-                <p class="main-header__name">INTERIOR LOUNGE</p>
-                <p class="main-header__tagline">Дизайн общественных пространств</p>
+                <div class="main-header__name-wrapper">
+                    <p class="main-header__name">INTERIOR LOUNGE</p>
+                    <p class="main-header__tagline">Дизайн общественных пространств</p>
+                </div>
             </div>
 
             <div class="main-header__link-wrapper">
@@ -62,7 +64,7 @@
                     </li>
                 </ul>
 
-                <a class="main-header__button"></a>
+                <a class="main-header__button">Оставить отзыв</a>
             </div>
         </div>
     </header>
