--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
             <div class="main-header__link-wrapper">
                 <ul class="main-header__list">
-                    <li class="main-header__list-item">
+                    <li class="main-header__list-item main-header__list-item--arrow">
                         <a class="main-header__link main-header__link--arrow">Наши проекты</a>
                     </li>
                     <li class="main-header__list-item">
