--- a/index.html
+++ b/index.html
@@ -58,6 +58,19 @@
                 <ul class="main-header__list">
                     <li class="main-header__list-item main-header__list-item--arrow">
                         <a class="main-header__link main-header__link--arrow">Наши проекты</a>
+                        <div class="main-header__list-item--dropdown-content">
+                            <ul class="main-header__dropdown-list">
+                                <li class="main-header__dropdown-list-item">
+                                    <a class="main-header__dropdown-link">Tomazzi Hall</a>
+                                </li>
+                                <li class="main-header__dropdown-list-item">
+                                    <a class="main-header__dropdown-link">Lounge Hall</a>                                   
+                                </li>
+                                <li class="main-header__dropdown-list-item">
+                                    <a class="main-header__dropdown-link">Astra Hall</a>                                
+                                </li>
+                            </ul>
+                        </div>
                     </li>
                     <li class="main-header__list-item">
                         <a class="main-header__link">Контакты</a>
