--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
                     Дизайн общественных интерьеров
                 </h1>
 
-                <h2 class="title main-container__sub-title">
+                <h2>
                     Кейс клубного дома Tomazzi Hall
                 </h2>
 
-                <img src="./img/image-1.png" alt="Офисное пространстсво" class="main-container__img-big">
+                <img src="./img/image-1.png" alt="Офисное пространстсво">
 
-                <p class="main-container__text main-container__text--second-color">
+                <p>
                     Создать объект, подобного которому в Санкт-Петербурге еще не было, — такую задачу поставил перед
                     собой
                     девелопер Interior Lounge, продумывая клубный дом Tomazzi Hall. Над экстерьером комплекса работала
@@ -106,13 +106,26 @@
                     парадных и 3 лаунж-зон.
                 </p>
 
-                <p class="main-container__text main-container__text--main-color">
+                <p>
                     Заказчик знал команду, следил за нашей деятельностью, поэтому никого больше не рассматривал —
                     поручил дизайн
                     парадных и лаунж-зон нам. Основными моментами, на которые мы оринтировались, стали:
                 </p>
 
-                <ul class="main-container__list">
+                <ul>
+                    <li>
+                        Источники вдохновения планировалось искать в строгой геометрии, модерне и духе «ревущих
+                        двадцатых»;
+                    </li>
+                    <li>
+                        Необходимо было выдержать дорогой и одновременно элегантный стиль;
+                    </li>
+                    <li>
+                        Ключевой элемент дизайна любого общественного пространства — удобство для жителей.
+                    </li>
+                </ul>
+
+                <!-- <ul class="main-container__list">
                     <li class="main-container__list-item">
                         Источники вдохновения планировалось искать в строгой геометрии, модерне и духе «ревущих
                         двадцатых»;
@@ -123,12 +136,15 @@
                     <li class="main-container__list-item">
                         Ключевой элемент дизайна любого общественного пространства — удобство для жителей.
                     </li>
-                </ul>
+                </ul> -->
 
-                <div class="main-container__img-wrapper">
+                <img src="./img/image-2.png" alt="Лестница">
+                <img src="./img/image-3.png" alt="Стеклянный фасад">
+
+                <!-- <div class="main-container__img-wrapper">
                     <img src="./img/image-2.png" alt="Лестница" class="main-container__img">
                     <img src="./img/image-3.png" alt="Стеклянный фасад" class="main-container__img">
-                </div>
+                </div> -->
 
                 <h2 class="title main-container__sub-title main-container__sub-title--little">
                     Начало работы и источники вдохновения
