--- a/index.html
+++ b/index.html
@@ -146,11 +146,23 @@
                     <img src="./img/image-3.png" alt="Стеклянный фасад" class="main-container__img">
                 </div> -->
 
-                <h2 class="title main-container__sub-title main-container__sub-title--little">
+                <h3>
                     Начало работы и источники вдохновения
-                </h2>
+                </h3>
 
-                <div class="main-container__text-wrapper">
+                <p class="main-container__text-column">
+                    Над экстерьером комплекса работала команда одного из крупнейших архитектурных бюро России —
+                    «Студия 11»,
+                    а мы оформили интерьер 10 парадных и 3 лаунж-зон.
+                </p>
+                
+                <p class="main-container__text-column">
+                    Заказчик знал команду, следил за нашей деятельностью, поэтому никого больше не рассматривал —
+                    поручил
+                    дизайн парадных и лаунж-зон нам.
+                </p>
+
+                <!-- <div class="main-container__text-wrapper">
                     <p class="main-container__text-column">
                         Над экстерьером комплекса работала команда одного из крупнейших архитектурных бюро России —
                         «Студия 11»,
@@ -161,7 +173,7 @@
                         поручил
                         дизайн парадных и лаунж-зон нам.
                     </p>
-                </div>
+                </div> -->
 
                 <div class="main-container__quote-wrapper">
                     <div class="main-container__quote-wrapper--content">
