--- a/index.html
+++ b/index.html
@@ -150,13 +150,13 @@
                     Начало работы и источники вдохновения
                 </h3>
 
-                <p class="main-container__text-column">
+                <p>
                     Над экстерьером комплекса работала команда одного из крупнейших архитектурных бюро России —
                     «Студия 11»,
                     а мы оформили интерьер 10 парадных и 3 лаунж-зон.
                 </p>
-                
-                <p class="main-container__text-column">
+
+                <p>
                     Заказчик знал команду, следил за нашей деятельностью, поэтому никого больше не рассматривал —
                     поручил
                     дизайн парадных и лаунж-зон нам.
@@ -175,15 +175,15 @@
                     </p>
                 </div> -->
 
-                <div class="main-container__quote-wrapper">
-                    <div class="main-container__quote-wrapper--content">
-                        <p class="main-container__quote">
-                            «Нам хотелось поддержать внешнюю архитектурную концепцию, но внутри добавить что-то
-                            необычное. Сделать
-                            некое подобие матрешки, чтобы все время открывались новые смыслы и элементы».
-                        </p>
-                    </div>
-                </div>
+                <div class="wp-block-separator"></div>
+
+                <p class="main-container__quote">
+                    «Нам хотелось поддержать внешнюю архитектурную концепцию, но внутри добавить что-то
+                    необычное. Сделать
+                    некое подобие матрешки, чтобы все время открывались новые смыслы и элементы».
+                </p>
+
+                <div class="wp-block-separator"></div>
             </div>
         </div>
 
