--- a/index.html
+++ b/index.html
@@ -177,11 +177,11 @@
 
                 <div class="wp-block-separator"></div>
 
-                <p class="main-container__quote">
+                <blockquote>
                     «Нам хотелось поддержать внешнюю архитектурную концепцию, но внутри добавить что-то
                     необычное. Сделать
                     некое подобие матрешки, чтобы все время открывались новые смыслы и элементы».
-                </p>
+                </blockquote>
 
                 <div class="wp-block-separator"></div>
             </div>
