--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     Кейс клубного дома Tomazzi Hall
                 </h2>
 
-                <img src="./img/image-1.png" alt="Офисное пространстсво">
+                <img width="1100" height="400" style="background-image: url('./img/image-1.png');" alt="Офисное пространстсво">
 
                 <p>
                     Создать объект, подобного которому в Санкт-Петербурге еще не было, — такую задачу поставил перед
@@ -138,8 +138,8 @@
                     </li>
                 </ul> -->
 
-                <img src="./img/image-2.png" alt="Лестница">
-                <img src="./img/image-3.png" alt="Стеклянный фасад">
+                <img width="540" height="350" style="src: url("./img/image-2.png");" alt="Лестница">
+                <img width="540" height="350" style="background-image: url('./img/image-3.png');" alt="Стеклянный фасад">
 
                 <!-- <div class="main-container__img-wrapper">
                     <img src="./img/image-2.png" alt="Лестница" class="main-container__img">
