--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     Кейс клубного дома Tomazzi Hall
                 </h2>
 
-                <img width="1100" height="400" style="background-image: url('./img/image-1.png');" alt="Офисное пространстсво">
+                <img class="content-img--full" width="1100" height="400" style="background-image: url(img/image-1.png);">
 
                 <p>
                     Создать объект, подобного которому в Санкт-Петербурге еще не было, — такую задачу поставил перед
@@ -138,8 +138,8 @@
                     </li>
                 </ul> -->
 
-                <img width="540" height="350" style="src: url("./img/image-2.png");" alt="Лестница">
-                <img width="540" height="350" style="background-image: url('./img/image-3.png');" alt="Стеклянный фасад">
+                <img class="content-img" src="./img/image-2.png" width="540" height="350" alt="Лестница">
+                <img class="content-img" src="./img/image-3.png" width="540" height="350" alt="Стеклянный фасад">
 
                 <!-- <div class="main-container__img-wrapper">
                     <img src="./img/image-2.png" alt="Лестница" class="main-container__img">
@@ -212,7 +212,7 @@
             <div class="main-footer__comment-wrapper">
                 <ul class="main-footer__comment-list">
                     <li class="main-footer__comment-item">
-                        <img src="./img/comment-1.jpg" alt="Аватарка-1" class="main-footer__comment-item-img">
+                        <img src="./img/comment-1.jpg" alt="Аватарка-1" class="main-footer__comment-avatar">
                         <div class="main-footer__comment-item-wrapper-text">
                             <p class="main-footer__comment-item-surname">Иван Грачев</p>
                             <p class="main-footer__comment-item-text">Очень самобытный и необычный проект.</p>
@@ -220,7 +220,7 @@
                     </li>
 
                     <li class="main-footer__comment-item">
-                        <img src="./img/comment-2.jpg" alt="Аватарка-1" class="main-footer__comment-item-img">
+                        <img src="./img/comment-2.jpg" alt="Аватарка-1" class="main-footer__comment-avatar">
                         <div class="main-footer__comment-item-wrapper-text">
                             <p class="main-footer__comment-item-surname">Мария Рачинская</p>
                             <p class="main-footer__comment-item-text">Мне особенно понравилось решение лестничных
@@ -231,7 +231,7 @@
                     </li>
 
                     <li class="main-footer__comment-item">
-                        <img src="./img/comment-3.jpg" alt="Аватарка-1" class="main-footer__comment-item-img">
+                        <img src="./img/comment-3.jpg" alt="Аватарка-1" class="main-footer__comment-avatar">
                         <div class="main-footer__comment-item-wrapper-text">
                             <p class="main-footer__comment-item-surname">Светлана</p>
                             <p class="main-footer__comment-item-text">Очень нравится, что в городе развиваются такие
