--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 
             <div class="main-header__link-wrapper">
 
+                <!-- Меню -->
                 <nav class="menu-primary-container">
                     <ul class="menu">
                         <li class="menu-item menu-item-has-children">
