--- a/index.html
+++ b/index.html
@@ -76,13 +76,15 @@
                             </ul>
                         </li>
 
-                        <li class="menu-item">
+                        <li class="menu-item current-menu-item">
                             <a href="#">Контакты</a>
+                        </li>
+
+                        <li class="menu-item menu-item-styled">
+                            <a class="">Оставить отзыв</a>
                         </li>
                     </ul>
                 </nav>
-
-                <a class="main-header__button">Оставить отзыв</a>
             </div>
         </div>
     </header>
